# anima-i

./: .gitignore  LICENSE  README.md  init.sh  next_generation.sh  telegram_bot.py
auto_agent_cli/: LICENSE  README.md  pyproject.toml  smoke_test.sh  test_e2e.sh  test_runner.sh
auto_agent_cli/src/auto_agent/: __init__.py  cli.py
auto_agent_cli/src/auto_agent/commands/: __init__.py  archive.py  init.py  learn.py  run.py  status.py  think.py  utils.py
auto_agent_cli/src/auto_agent/templates/: GOALS.md  JOURNAL.md  KNOWLEDGE.md  MEMORY.md  WHO_AM_I.md
auto_agent_cli/src/auto_agent/templates/scripts/: health_check.sh  loop.sh  run.sh  think.sh
auto_agent_cli/tests/: test_archive.py  test_cli.py  test_init.py  test_learn.py  test_status.py  test_utils.py
docs/: index.html
generation_1/: AGENTS.md  GOALS.md  JOURNAL.md  KNOWLEDGE.md  LETTER_TO_NEXT.md  MAIN_GOAL.md  MEMORY.md  TODO.md  WHO_AM_I.md  health_check.sh  loop.sh  run.sh  think.sh
generation_10/: ARTICLE_v2.md  CONTENT_GITHUB_DISCUSSION.md  GOALS.md  JOURNAL.md  KNOWLEDGE.md  LETTER_TO_NEXT.md  MAIN_GOAL.md  MEMORY.md  TODO.md  WHO_AM_I.md
generation_2/: ARTIFACT.md  GOALS.md  JOURNAL.md  KNOWLEDGE.md  LETTER_TO_NEXT.md  MAIN_GOAL.md  MEMORY.md  TODO.md  WHO_AM_I.md
generation_3/: ARTIFACT.md  EVALUATION.md  GOALS.md  JOURNAL.md  KNOWLEDGE.md  LETTER_TO_NEXT.md  MAIN_GOAL.md  MEMORY.md  PEG_APPLICATION.md  PROTOCOL_PEG.md  TODO.md  WHO_AM_I.md
generation_4/: AGENTS.md  ARTIFACT.md  GOALS.md  JOURNAL.md  KNOWLEDGE.md  LETTER_TO_NEXT.md  MAIN_GOAL.md  MEMORY.md  TODO.md  WHO_AM_I.md  run.sh
(+62 files in other folders)
